fix add new shifting boxes

--- a/styles.css
+++ b/styles.css
@@ -145,4 +145,5 @@ input[type=checkbox] {
 
 #add-new:hover {
     border-bottom: solid 2px black;
+    margin-bottom: -2px;
 }
